# galactica

./: .gitignore  Cargo.toml  justfile  package-lock.json  package.json  spec.md
.github/workflows/: ci.yml  release.yml
.husky/: pre-commit  pre-push
config/: galactica.toml  gateway.toml  node-agent.toml
config/dev/: control-plane.toml  gateway.toml  linux-node-agent.toml  macos-node-agent.toml  windows-node-agent.toml
dashboard/: package-lock.json  package.json
dashboard/src/app/: globals.css  layout.tsx  page.tsx
dashboard/src/app/inference/: page.tsx
dashboard/src/app/models/: page.tsx
dashboard/src/app/nodes/: page.tsx
dashboard/src/app/settings/: page.tsx
dashboard/src/components/: dashboard-app.tsx
dashboard/src/components/cluster/: cluster-overview.tsx
dashboard/src/components/layout/: header.tsx  sidebar.tsx
dashboard/src/components/models/: model-card.tsx  model-list.tsx
dashboard/src/components/nodes/: node-card.tsx  node-list.tsx
dashboard/src/hooks/: use-cluster-state.ts
dashboard/src/lib/: api.ts  types.ts
docs/plans/: 2026-03-08-proto-definitions-design.md  2026-03-08-proto-definitions.md
docs/runbooks/: galactica-cli-releases.md  qwen3.5-4b-windows-macos.md
models/deepseek-r1-distill-qwen-14b/: manifest.json
models/gemma-2-9b-it/: manifest.json
models/llama-3.1-8b-instruct/: manifest.json
models/qwen3.5-27b/: manifest.json
models/qwen3.5-4b/: manifest.json
proto/: buf.gen.yaml
proto/galactica/artifact/v1/: artifact.proto
proto/galactica/common/v1/: common.proto
proto/galactica/control/v1/: auth.proto  control.proto
proto/galactica/gateway/v1/: gateway.proto
proto/galactica/node/v1/: node.proto
proto/galactica/runtime/v1/: runtime.proto
python/: pyproject.toml
python/galactica_runtime/: __init__.py  __main__.py  contract.py  server.py  types.py
python/galactica_runtime/adapters/: __init__.py  llamacpp_adapter.py  mlx_adapter.py  onnx_adapter.py  vllm_adapter.py
python/galactica_runtime/proto/: __init__.py
python/tests/: test_contract.py  test_mlx_adapter.py
rust/galactica-artifact/: Cargo.toml
rust/galactica-artifact/src/: download.rs  lib.rs
rust/galactica-artifact/src/cache/: local_cache.rs
rust/galactica-artifact/src/download/: integrity.rs  manager.rs  mod.rs
rust/galactica-artifact/src/registry/: model_registry.rs
rust/galactica-cli/: Cargo.toml
rust/galactica-cli/src/: main.rs
rust/galactica-common/: Cargo.toml  build.rs
rust/galactica-common/src/: error.rs  inference.rs  lib.rs
rust/galactica-common/src/events/: command.rs  event.rs
rust/galactica-common/src/types/: auth.rs  cluster.rs  config.rs  mod.rs  model.rs  node.rs  task.rs
rust/galactica-control-plane/: Cargo.toml
rust/galactica-control-plane/src/: lib.rs  main.rs  server.rs  store.rs
rust/galactica-control-plane/src/registry/: node_registry.rs
rust/galactica-control-plane/src/scheduler/: mod.rs  placement.rs  pool.rs  topology.rs
rust/galactica-control-plane/src/service/: artifact_service.rs  control_service.rs  mod.rs
rust/galactica-control-plane/src/state/: apply.rs  mod.rs  store.rs
rust/galactica-gateway/: Cargo.toml
rust/galactica-gateway/src/: lib.rs  main.rs  server.rs
rust/galactica-gateway/src/api/: health.rs  mod.rs  models.rs  openai.rs
rust/galactica-gateway/src/middleware/: auth.rs  rate_limit.rs
rust/galactica-gateway/src/streaming/: sse.rs
rust/galactica-networking/: Cargo.toml
rust/galactica-networking/src/: bootstrap.rs  discovery.rs  endpoints.rs  lib.rs  tls.rs
rust/galactica-networking/src/discovery/: bootstrap.rs  mdns.rs  mod.rs
rust/galactica-networking/src/peer/: manager.rs
rust/galactica-networking/src/transport/: tls.rs
rust/galactica-node-agent/: Cargo.toml
rust/galactica-node-agent/src/: agent.rs  hardware.rs  lib.rs  main.rs  planner.rs  runtime_backends.rs  supervision.rs
rust/galactica-node-agent/src/hardware/: capabilities.rs  detect.rs  mod.rs  monitor.rs
rust/galactica-node-agent/src/plan/: planner.rs
rust/galactica-node-agent/src/runtime/: manager.rs
rust/galactica-node-agent/src/service/: node_service.rs
rust/galactica-node-agent/src/supervisor/: lifecycle.rs  mod.rs  process.rs
rust/galactica-observability/: Cargo.toml
rust/galactica-observability/src/: lib.rs  logging.rs  metrics.rs  tracing_init.rs
scripts/: install.ps1  install.sh
scripts/dev/: mint-enrollment-token.sh  start-control-plane.sh  start-gateway.sh  start-macos-node-agent.sh  start-windows-node-agent.ps1
