[package]
name = "galactica-artifact"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
galactica-common = { workspace = true }
galactica-observability = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }

[lints]
workspace = true
