[package]
name = "galactica-artifact"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
galactica-common = { workspace = true }
galactica-observability = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
reqwest = { workspace = true }
tokio-stream = { workspace = true }
async-stream = { workspace = true }
uuid = { workspace = true }
tonic = { workspace = true }
futures = { workspace = true }
sha2 = { workspace = true }
chrono = { workspace = true }

[lints]
workspace = true
