[package]
name = "galactica-control-plane"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
galactica-common = { workspace = true }
galactica-observability = { workspace = true }
galactica-networking = { workspace = true }
galactica-artifact = { workspace = true }
tokio = { workspace = true }
tonic = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
clap = { workspace = true }
prost = { workspace = true }
sqlx = { workspace = true }
tokio-stream = { workspace = true }

[lints]
workspace = true
