[package]
name = "galactica-control-plane"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
galactica-common = { workspace = true }
galactica-observability = { workspace = true }
galactica-networking = { workspace = true }
galactica-artifact = { workspace = true }
tokio = { workspace = true }
tonic = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
clap = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
tokio-stream = { workspace = true }
async-stream = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }
sqlx = { workspace = true }
sha2 = { workspace = true }

[lints]
workspace = true

[dev-dependencies]
galactica-node-agent = { path = "../galactica-node-agent" }
