[package]
name = "galactica-gateway"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
galactica-common = { workspace = true }
galactica-observability = { workspace = true }
galactica-control-plane = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tonic = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
futures = { workspace = true }
bytes = { workspace = true }
uuid = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }

[lints]
workspace = true

[dev-dependencies]
galactica-artifact = { path = "../galactica-artifact" }
galactica-node-agent = { path = "../galactica-node-agent" }
tokio-stream = { workspace = true }
