[package]
name = "galactica-node-agent"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
galactica-common = { workspace = true }
galactica-observability = { workspace = true }
galactica-networking = { workspace = true }
galactica-artifact = { workspace = true }
tokio = { workspace = true }
tonic = { workspace = true }
sysinfo = { workspace = true }
clap = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
serde_json = { workspace = true }
tokio-stream = { workspace = true }
async-stream = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
anyhow = { workspace = true }
reqwest = { workspace = true }

[lints]
workspace = true
